--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-asgiref==3.5.0
-Django==4.0.3
-gunicorn==20.1.0
+asgiref==3.5.2
+backports.zoneinfo==0.2.1
+distlib==0.3.4
+dj-database-url==1.0.0
+Django==4.0.4
+django-widget-tweaks==1.4.12
+filelock==3.7.1
+platformdirs==2.5.2
+six==1.16.0
 sqlparse==0.4.2
-whitenoise==6.0.0
+virtualenv==20.14.1
