--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 asgiref==3.5.2
-backports.zoneinfo==0.2.1
 distlib==0.3.4
 dj-database-url==1.0.0
 Django==4.0.4
 django-widget-tweaks==1.4.12
 filelock==3.7.1
+gunicorn==20.1.0
 platformdirs==2.5.2
 six==1.16.0
 sqlparse==0.4.2
 virtualenv==20.14.1
+whitenoise==6.2.0
