--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-widget-tweaks==1.4.12
 filelock==3.7.1
 gunicorn==20.1.0
 platformdirs==2.5.2
+psycopg2-binary==2.9.3
 six==1.16.0
 sqlparse==0.4.2
 virtualenv==20.14.1
